<resources>
    <string name="app_name">StoreFrontApp</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Business Registration</string>
    <string name="admin_name">Admin Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="business_name">Business Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User? Register here</string>
    <string name="welcome_home_page">Welcome, Home Page</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="next">next</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="setup_your_business_profile">Setup your Business Profile</string>
    <string name="get_started">Get Started</string>

    <string-array name="spinner_category">
        <item>Retail</item>
        <item>Electronics</item>
        <item>Food</item>
        <item>Pets</item>
    </string-array>

    <string-array name="product_type_spinner">
        <item>Shoes</item>
        <item>Jacket</item>
        <item>Hats</item>
        <item>Shirt</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>